app/globals.css
:root {
  --font-sans: var(--font-ia-writer-quattro), sans-serif;
  --font-mono: var(--font-ia-writer-mono), "Courier Prime", "Courier New", ui-monospace, monospace;

  --color-white:         hsla(038deg, 100%, 090%, 1.0);
  --color-black:         hsla(038deg, 010%, 002%, 1.0);
  --color-dark-gray:     hsla(038deg, 010%, 040%, 1.0);
  --color-dark-gray-20:  hsla(038deg, 010%, 040%, 0.2);
  --color-light-gray:    hsla(038deg, 020%, 060%, 1.0);
  --color-light-gray-20: hsla(038deg, 020%, 060%, 0.2);
  --color-compsigh:      hsla(038deg, 100%, 050%, 1.0);
  --color-compsigh-20:   hsla(038deg, 100%, 050%, 0.2);
  --color-compsigh-60:   hsla(038deg, 100%, 050%, 0.6);
  --color-diff-add:      hsla(120deg, 100%, 025%, 0.2);
  --color-diff-remove:   hsla(360deg, 100%, 050%, 0.2);

  color: var(--color-white);
  background-color: var(--color-black);
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

body {
  margin: 40px auto;
  max-width: 650px;
  line-height: 180%;
  font-size: 1rem;
  font-family: var(--font-sans);
}

@media (max-width: 700px) {
  body {
    margin: 40px 40px;
  }
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 1.5em 0 1em;
  line-height: 1.2;
}

a {
  color: var(--color-compsigh);
  text-decoration: none;
}

p,
ul,
ol {
  margin: 1em 0;
}

li {
  margin: 0.5em 0;
}

li::before,
li::marker {
  color: var(--color-dark-gray);
}

ul > li {
  list-style-type: none;
}

ul > li::before {
  position: absolute;
  margin-left: -22px;
  margin-top: -1px;
  content: "-";
}

ul ul {
  margin: unset;
}

ul ul > li {
  margin-left: 1em;
}

code {
  font-family: var(--font-mono);
  counter-reset: line;
}

:not(pre) > code {
  box-shadow: 0 0 0 1px var(--color-dark-gray);
  padding: 0.1em 0.4em;
  border-radius: 0.4em;
}

pre {
  overflow-x: auto;
  padding: 1rem 0;
  font-size: 0.8em;
}

pre [data-line] {
  padding: 0 1rem;
}

pre > code[data-line-numbers] > [data-line]::before {
  content: counter(line);
  counter-increment: line;
  display: inline-block;
  width: 2em;
  margin-right: 2em;
  text-align: right;
  color: var(--color-dark-gray);
  user-select: none;
  font-variant-numeric: tabular-nums;
}

pre > code[data-line-numbers] > [data-line]:hover::before {
  color: var(--color-light-gray);
}

pre
  > code[data-line-numbers][data-line-numbers-max-digits="2"]
  > [data-line]::before {
  width: 2em;
}

pre
  > code[data-line-numbers][data-line-numbers-max-digits="3"]
  > [data-line]::before {
  width: 3em;
}

span[data-highlighted-line] {
  background-color: var(--color-compsigh-20);
}

span[data-highlighted-line-id="add"] {
  background-color: var(--color-diff-add);
}

span[data-highlighted-line-id="remove"] {
  background-color: var(--color-diff-remove);
}

